--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
                 <a href="baby_showers.html" class="gallery-element">
                     <p>Baby Showers</p>
                 </a>
-                <a href="" class="gallery-element">
+                <a href="birthdays.html" class="gallery-element">
                     <p>Birthdays</p>
                 </a>
                 <a href="" class="gallery-element">
