--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
                 <a href="birthdays.html" class="gallery-element">
                     <p>Birthdays</p>
                 </a>
-                <a href="" class="gallery-element">
+                <a href="family_shots.html" class="gallery-element">
                     <p>Family Shots</p>
                 </a>
                 <a href="" class="gallery-element">
