--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             </a>
             <div class="navigation">
                 <ul>
-                    <a href="about.html"><li>About me</li></a>
-                    <a href="services.html"><li>Services</li></a>
-                    <a href="contact.html"><li>Contact</li></a>
+                    <a href="about.html"><li><i class="fas fa-user"></i>About me</li></a>
+                    <a href="services.html"><li><i class="fas fa-camera"></i>Services</li></a>
+                    <a href="contact.html"><li><i class="fas fa-address-book"></i>Contact</li></a>
                 </ul>
             </div>
         </div>
-        <div class="hero">
+        <div class="hero home">
             <div class="hero-text">
                 <h1>Your photographer search ends here</h1>
                 <h2>I will transform your lovely moments into digital memories so you can keep them next to your heart forever and ever!!!</h2>
