--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,10 @@
                     <textarea name="message" id="" cols="30" rows="10">Your message</textarea>
                     <input type="submit" value="Submit" class="btn">
                 </form>
+                <div class="social">
+                    <a href=""><i class="fab fa-facebook"></i></a>
+                    <a href=""><i class="fab fa-instagram"></i></a>
+                </div>
             </div>
             <img src="./img/Backgrounds/contactBackground.jpg" alt="Wedding photo">
         </div>
