--- a/index.html
+++ b/index.html
@@ -19,32 +19,38 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <a href="" class="logo">
-                <p>Mia Moldovan.</p>
-                <p>Photography</p>
-            </a>
-            <div class="navigation">
-                <ul>
-                    <a href="about.html"><li><i class="fas fa-user"></i>About me</li></a>
-                    <a href="services.html"><li><i class="fas fa-camera"></i>Services</li></a>
-                    <a href="contact.html"><li><i class="fas fa-address-book"></i>Contact</li></a>
-                </ul>
-            </div>
-        </div>
-        <div class="hero home">
+      <div class="header">
+          <a href="index.html" class="logo">
+              <p>Mia Moldovan</p>
+              <p>Photography</p>
+          </a>
+          <div class="top-nav">
+              <ul>
+                  <li><a href="">About me</a></li>
+                  <li><a href="">Services</a></li>
+                  <li><a href="">Contact</a></li>
+              </ul>
+          </div>
+      </div>
+      <div class="hero" style="background-image: url(./img/Backgrounds/heroBackground.jpg);">
             <div class="hero-text">
                 <h1>Your photographer search ends here</h1>
                 <h2>I will transform your lovely moments into digital memories so you can keep them next to your heart forever and ever!!!</h2>
-                <a href="portfolio.html">View Portfolio</a>
+                
+                    <a href="" class="portfolio-btn">View portfolio</a>
+                
             </div>
-            <img src="./img/Backgrounds/dollar-gill-yqNRxWNrC04-unsplash.jpg" alt="Camera lens">
-        </div>
-        <div class="photo-group">
-            <img src="./img/Backgrounds/zoe-graham-fixEln2_j-I-unsplash (1).jpg" alt="Photographer with camera">
-            <img src="./img/Backgrounds/phil-desforges-oQd5dwDWu_8-unsplash.jpg" alt="camera objective">
-            <img src="./img/Backgrounds/jan-kopriva-nLcMMSWzgoI-unsplash.jpg" alt="camera">
-        </div>
+            <img src="./img/Backgrounds/dollar-gill-yqNRxWNrC04-unsplash.jpg" alt="">
+      </div>
+      <div class="footer">
+          <div class="footer-nav">
+            <ul>
+                <li><a href="">About me</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+          </div>
+      </div>
     </div>
 </body>
 </html>
