--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="header">
           <a href="index.html" class="logo">
-              <p>Mia Moldovan</p>
+              <p>Mia Moldovan.</p>
               <p>Photography</p>
           </a>
           <div class="top-nav">
