--- a/contact.html
+++ b/contact.html
@@ -19,38 +19,46 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <a href="index.html" class="logo">
-                <p>Mia Moldovan.</p>
-                <p>Photography</p>
-            </a>
-            <div class="navigation">
-                <ul>
-                    <a href="about.html"><li>About me</li></a>
-                    <a href="services.html"><li>Services</li></a>
-                    <a href="" class="active"><li>Contact</li></a>
-                </ul>
-            </div>
-        </div>
-        <div class="hero">
+      <div class="header">
+          <a href="index.html" class="logo">
+              <p>Mia Moldovan.</p>
+              <p>Photography</p>
+          </a>
+          <div class="top-nav">
+              <ul>
+                  <li><a href="about.html">About me</a></li>
+                  <li><a href="">Services</a></li>
+                  <li><a href="">Contact</a></li>
+              </ul>
+          </div>
+      </div>
+      <div class="hero" style="background-image: url(./img/Backgrounds/contactBackground.jpg);">
             <div class="hero-text">
-                
+                <h1>Say Hello</h1>
                 <form action="" class="my-form">
-                    <h2>Say Hello</h2>
-                    <label for="name">Your name</label>
+                    <label for="name">Your Name</label>
                     <input type="text" name="name" id="">
                     <label for="email">Your email</label>
-                    <input type="email" name="email" id="">
-                    <textarea name="message" id="" cols="30" rows="10">Your message</textarea>
-                    <input type="submit" value="Submit" class="btn">
+                    <input type="email" name="" id="">
+                    <textarea name="" id="" cols="30" rows="10">Your message</textarea>
+                    <input type="submit" value="Submit" class="submit-btn">
                 </form>
-                <div class="social">
+                <div class="social-icons">
                     <a href=""><i class="fab fa-facebook"></i></a>
                     <a href=""><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
-            <img src="./img/Backgrounds/contactBackground.jpg" alt="Wedding photo">
-        </div>
+            <img src="./img/Backgrounds/dollar-gill-yqNRxWNrC04-unsplash.jpg" alt="">
+      </div>
+      <div class="footer">
+          <div class="footer-nav">
+            <ul>
+                <li><a href="about.html">About me</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="" class="active">Contact</a></li>
+            </ul>
+          </div>
+      </div>
     </div>
 </body>
 </html>
