--- a/services.html
+++ b/services.html
@@ -19,43 +19,52 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <a href="index.html" class="logo">
-                <p>Mia Moldovan.</p>
-                <p>Photography</p>
-            </a>
-            <div class="navigation">
-                <ul>
-                    <a href="about.html"><li>About me</li></a>
-                    <a href="" class="active"><li>Services</li></a>
-                    <a href="contact.html"><li>Contact</li></a>
-                </ul>
-            </div>
-        </div>
-        <div class="hero">
+      <div class="header">
+          <a href="index.html" class="logo">
+              <p>Mia Moldovan.</p>
+              <p>Photography</p>
+          </a>
+          <div class="top-nav">
+              <ul>
+                  <li><a href="about.html">About me</a></li>
+                  <li><a href="" class="active">Services</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+              </ul>
+          </div>
+      </div>
+      <div class="hero" style="background-image: url(./img/Backgrounds/servicesBackground.jpg);">
             <div class="hero-text">
-                <div class="services-list">
-                <ul>
-                    <li>Baby Photography</li>
-                    <li>Family Photography</li>
-                    <li>Wedding Photography</li>
-                    <li>Engagement Photography</li>
-                    <li>Candid Photography</li>
-                    <li>Business Photography</li>
-                </ul>
-                <ul>
-                    <li>Comercial Photography</li>
-                    <li>Product Photography</li>
-                    <li>Landscape Photography</li>
-                    <li>Street Photography</li>
-                    <li>Portrait Photography</li>
-                    <li>Black & White Photography</li>
-                </ul>
+               <ul>
+                   <li>Baby photography</li>
+                   <li>Family photography</li>
+                   <li>Wedding photography</li>
+                   <li>Engagement Photography</li>
+                   <li>Candid photography</li>
+                   <li>Business photography</li>
+               </ul>
+               <ul>
+                   <li>Comercial photography</li>
+                   <li>Product photography</li>
+                   <li>Landscape photography</li>
+                   <li>Street photography</li>
+                   <li>Portrait photography</li>
+                   <li>Black & White photography</li>
+               </ul>
+                
+                    <a href="" class="portfolio-btn">View portfolio</a>
+                
             </div>
-                <a href="portfolio.html">View Portfolio</a>
-            </div>
-            <img src="./img/Backgrounds/servicesBackground.jpg" alt="Envelope and memory stick">
-        </div>
+            <img src="./img/Backgrounds/dollar-gill-yqNRxWNrC04-unsplash.jpg" alt="">
+      </div>
+      <div class="footer">
+          <div class="footer-nav">
+            <ul>
+                <li><a href="about.html">About me</a></li>
+                <li><a href="" class="active">Services</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+          </div>
+      </div>
     </div>
 </body>
 </html>
