--- a/about.html
+++ b/about.html
@@ -19,27 +19,38 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <a href="index.html" class="logo">
-                <p>Mia Moldovan.</p>
-                <p>Photography</p>
-            </a>
-            <div class="navigation">
-                <ul>
-                    <a href="" class="active"><li>About me</li></a>
-                    <a href="services.html"><li>Services</li></a>
-                    <a href="contact.html"><li>Contact</li></a>
-                </ul>
-            </div>
-        </div>
-        <div class="hero">
+      <div class="header">
+          <a href="index.html" class="logo">
+              <p>Mia Moldovan.</p>
+              <p>Photography</p>
+          </a>
+          <div class="top-nav">
+              <ul>
+                  <li><a href="">About me</a></li>
+                  <li><a href="">Services</a></li>
+                  <li><a href="">Contact</a></li>
+              </ul>
+          </div>
+      </div>
+      <div class="hero" style="background-image: url(./img/Backgrounds/aboutBackground.jpg);">
             <div class="hero-text">
-                <img src="./img/Mia_Profile.jpg" alt="My profile photo">
-                <p>I’m Mia, a pasionate photographer based in Newcastle-upon-Tyne. I’ve been living in Newcastle for almost 7 years and I love it. I love the surroundings and people, which are very welcoming and sensible. I have always been pasionate about photography since I was a child. Coming to UK in 2014 and working as a Registered Nurse, opened my eyes to reality, refinding myself again into the arms of photography, creativity and imagination. I love working with people. I love reading, travelling and meeting new people and places. I’m a openminded person, love to see my clients be comfortable, having a good time during sessions and not being nervous in front of the camera.</p>
-                <a href="portfolio.html">View Portfolio</a>
+               <img src="./img/Mia_Profile.jpg" class="profile" alt="">
+               <p>I’m Mia, a pasionate photographer based in Newcastle-upon-Tyne. I’ve been living in Newcastle for almost 7 years and I love it. I love the surroundings and people, which are very welcoming and sensible. I have always been pasionate about photography since I was a child. Coming to UK in 2014 and working as a Registered Nurse, opened my eyes to reality, refinding myself again into the arms of photography, creativity and imagination. I love working with people. I love reading, travelling and meeting new people and places. I’m a openminded person, love to see my clients be comfortable, having a good time during sessions and not being nervous in front of the camera.</p>
+                
+                    <a href="" class="portfolio-btn">View portfolio</a>
+                
             </div>
-            <img src="./img/Backgrounds/aboutBackground.jpg" alt="Camera lens">
-        </div>
+            <img src="./img/Backgrounds/dollar-gill-yqNRxWNrC04-unsplash.jpg" alt="">
+      </div>
+      <div class="footer">
+          <div class="footer-nav">
+            <ul>
+                <li><a href="" class="active">About me</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+      </div>
     </div>
 </body>
 </html>
