--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </a>
           <div class="top-nav">
               <ul>
-                  <li><a href="">About me</a></li>
+                  <li><a href="about.html">About me</a></li>
                   <li><a href="">Services</a></li>
                   <li><a href="">Contact</a></li>
               </ul>
@@ -45,9 +45,9 @@
       <div class="footer">
           <div class="footer-nav">
             <ul>
-                <li><a href="">About me</a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="about.html">About me</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
       </div>
