--- a/services.html
+++ b/services.html
@@ -61,7 +61,7 @@
             <ul>
                 <li><a href="about.html">About me</a></li>
                 <li><a href="" class="active">Services</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
       </div>
