--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                <img src="./img/Mia_Profile.jpg" class="profile" alt="">
                <p>I’m Mia, a pasionate photographer based in Newcastle-upon-Tyne. I’ve been living in Newcastle for almost 7 years and I love it. I love the surroundings and people, which are very welcoming and sensible. I have always been pasionate about photography since I was a child. Coming to UK in 2014 and working as a Registered Nurse, opened my eyes to reality, refinding myself again into the arms of photography, creativity and imagination. I love working with people. I love reading, travelling and meeting new people and places. I’m a openminded person, love to see my clients be comfortable, having a good time during sessions and not being nervous in front of the camera.</p>
                 
-                    <a href="" class="portfolio-btn">View portfolio</a>
+                    <a href="portfolio.html" class="portfolio-btn">View portfolio</a>
                 
             </div>
             <img src="./img/Backgrounds/dollar-gill-yqNRxWNrC04-unsplash.jpg" alt="">
