--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h1>Your photographer search ends here</h1>
                 <h2>I will transform your lovely moments into digital memories so you can keep them next to your heart forever and ever!!!</h2>
                 
-                    <a href="" class="portfolio-btn">View portfolio</a>
+                    <a href="portfolio.html" class="portfolio-btn">View portfolio</a>
                 
             </div>
             <img src="./img/Backgrounds/dollar-gill-yqNRxWNrC04-unsplash.jpg" alt="">
