--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@
                    <li>Black & White photography</li>
                </ul>
                 
-                    <a href="" class="portfolio-btn">View portfolio</a>
+                    <a href="portfolio.html" class="portfolio-btn">View portfolio</a>
                 
             </div>
             <img src="./img/Backgrounds/dollar-gill-yqNRxWNrC04-unsplash.jpg" alt="">
