--- a/about.html
+++ b/about.html
@@ -26,9 +26,9 @@
           </a>
           <div class="top-nav">
               <ul>
-                  <li><a href="">About me</a></li>
-                  <li><a href="">Services</a></li>
-                  <li><a href="">Contact</a></li>
+                  <li><a href=""><i class="fas fa-user"></i>About me</a></li>
+                  <li><a href="services.html"><i class="fas fa-camera"></i>Services</a></li>
+                  <li><a href="contact.html"><i class="fas fa-envelope"></i>Contact</a></li>
               </ul>
           </div>
       </div>
@@ -45,9 +45,9 @@
       <div class="footer">
           <div class="footer-nav">
             <ul>
-                <li><a href="" class="active">About me</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="" class="active"><i class="fas fa-user"></i>About me</a></li>
+                <li><a href="services.html"><i class="fas fa-camera"></i>Services</a></li>
+                <li><a href="contact.html"><i class="fas fa-envelope"></i>Contact</a></li>
             </ul>
           </div>
       </div>
