--- a/portfolio.html
+++ b/portfolio.html
@@ -26,9 +26,9 @@
           </a>
           <div class="top-nav">
               <ul>
-                  <li><a href="about.html">About me</a></li>
-                  <li><a href="services.html">Services</a></li>
-                  <li><a href="contact.html">Contact</a></li>
+                  <li><a href="about.html"><i class="fas fa-user"></i>About me</a></li>
+                  <li><a href="services.html"><i class="fas fa-camera"></i>Services</a></li>
+                  <li><a href="contact.html"><i class="fas fa-envelope"></i>Contact</a></li>
               </ul>
           </div>
       </div>
@@ -37,32 +37,29 @@
                 <a href="bussines.html" class="gallery-element" style="background-image: url(./img/Business/IMG-20210517-WA0000.jpg);">
                     <p>Business</p>
                 </a>
-                <a href="bussines.html" class="gallery-element" style="background-image: url(./img/Birthdays/IMG_1510.jpg);">
+                <a href="birthdays.html" class="gallery-element" style="background-image: url(./img/Birthdays/IMG_1510.jpg);">
                     <p>Birthdays</p>
                 </a>
-                <a href="bussines.html" class="gallery-element" style="background-image: url(./img/Candid_shots/IMG_3460-2.jpg);">
+                <a href="family_shots.html" class="gallery-element" style="background-image: url(./img/Candid_shots/IMG_3460-2.jpg);">
                     <p>Family Shots</p>
                 </a>
-                <a href="bussines.html" class="gallery-element" style="background-image: url(./img/Cityscapes/117327110_120482686420068_9105612541632852538_o.jpg);">
+                <a href="cityscapes.html" class="gallery-element" style="background-image: url(./img/Cityscapes/117327110_120482686420068_9105612541632852538_o.jpg);">
                     <p>Cityscapes</p>
                 </a>
-                <a href="bussines.html" class="gallery-element" style="background-image: url(./img/David/received_725661804889812.jpg);">
+                <a href="baby_shots.html" class="gallery-element" style="background-image: url(./img/David/received_725661804889812.jpg);">
                     <p>Baby Shots</p>
                 </a>
-                <a href="bussines.html" class="gallery-element" style="background-image: url(./img/Indoors_fun_sessions/IMG_6346.jpg);">
+                <a href="fun.html" class="gallery-element" style="background-image: url(./img/Indoors_fun_sessions/IMG_6346.jpg);">
                     <p>Fun</p>
                 </a>
-                <a href="bussines.html" class="gallery-element"style="background-image: url(./img/);">
-                    <p>Business</p>
+                <a href="landscapes.html" class="gallery-element" style="background-image: url(./img/Landscapes_Seascapes/20160321_113914.jpg);">
+                    <p>Landscape</p>
                 </a>
-                <a href="bussines.html" class="gallery-element">
-                    <p>Business</p>
+                <a href="baby_showers.html" class="gallery-element" style="background-image: url(./img/Baby_showers/IMG_5093.jpg);">
+                    <p>Baby Showers</p>
                 </a>
-                <a href="bussines.html" class="gallery-element">
-                    <p>Business</p>
-                </a>
-                <a href="bussines.html" class="gallery-element">
-                    <p>Business</p>
+                <a href="wildlife.html" class="gallery-element" style="background-image: url(./img/Wildlife/IMG_7423.jpg);">
+                    <p>Wildlife</p>
                 </a>
             </div>
                     <a href="" class="portfolio-btn">View portfolio</a>
@@ -72,9 +69,9 @@
       <div class="footer">
           <div class="footer-nav">
             <ul>
-                <li><a href="about.html">About me</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html"><i class="fas fa-user"></i>About me</a></li>
+                <li><a href="services.html"><i class="fas fa-camera"></i>Services</a></li>
+                <li><a href="contact.html"><i class="fas fa-envelope"></i>Contact</a></li>
             </ul>
           </div>
       </div>
