--- a/services.html
+++ b/services.html
@@ -26,9 +26,9 @@
           </a>
           <div class="top-nav">
               <ul>
-                  <li><a href="about.html">About me</a></li>
-                  <li><a href="" class="active">Services</a></li>
-                  <li><a href="contact.html">Contact</a></li>
+                  <li><a href="about.html"><i class="fas fa-user"></i>About me</a></li>
+                  <li><a href="" class="active"><i class="fas fa-camera"></i>Services</a></li>
+                  <li><a href="contact.html"><i class="fas fa-envelope"></i>Contact</a></li>
               </ul>
           </div>
       </div>
@@ -59,9 +59,9 @@
       <div class="footer">
           <div class="footer-nav">
             <ul>
-                <li><a href="about.html">About me</a></li>
-                <li><a href="" class="active">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html"><i class="fas fa-user"></i>About me</a></li>
+                <li><a href="" class="active"><i class="fas fa-camera"></i>Services</a></li>
+                <li><a href="contact.html"><i class="fas fa-envelope"></i>Contact</a></li>
             </ul>
           </div>
       </div>
