--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                     <a href="portfolio.html" class="portfolio-btn">View portfolio</a>
                 
             </div>
-            <img src="./img/Backgrounds/dollar-gill-yqNRxWNrC04-unsplash.jpg" alt="">
+            <div class="hero-image" style="background-image: url(./img/Backgrounds/aboutBackground.jpg) ;"></div>
       </div>
       <div class="footer">
           <div class="footer-nav">
