--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                     <a href="portfolio.html" class="portfolio-btn">View portfolio</a>
                 
             </div>
-            <img src="./img/Backgrounds/dollar-gill-yqNRxWNrC04-unsplash.jpg" alt="">
+            <div class="hero-image" style="background-image: url(./img/Backgrounds/dollar-gill-yqNRxWNrC04-unsplash.jpg) ;"></div>
+            
       </div>
       <div class="footer">
           <div class="footer-nav">
