--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
       <div class="hero" style="background-image: url(./img/Backgrounds/contactBackground.jpg);">
             <div class="hero-text">
                 <h1>Say Hello</h1>
-                <form action="" class="my-form">
+                <form name="mia-moldo-photo" method="POST" data-netlify="true" class="my-form">
                     <label for="name">Your Name</label>
                     <input type="text" name="name" id="">
                     <label for="email">Your email</label>
@@ -48,7 +48,7 @@
                     <a href=""><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
-            <img src="./img/Backgrounds/dollar-gill-yqNRxWNrC04-unsplash.jpg" alt="">
+            <div class="hero-image" style="background-image: url(./img/Backgrounds/contactBackground.jpg) ;"></div>
       </div>
       <div class="footer">
           <div class="footer-nav">
