--- a/services.html
+++ b/services.html
@@ -34,6 +34,7 @@
       </div>
       <div class="hero" style="background-image: url(./img/Backgrounds/servicesBackground.jpg);">
             <div class="hero-text">
+                <div class="services">
                <ul>
                    <li>Baby photography</li>
                    <li>Family photography</li>
@@ -50,11 +51,11 @@
                    <li>Portrait photography</li>
                    <li>Black & White photography</li>
                </ul>
-                
+            </div>
                     <a href="portfolio.html" class="portfolio-btn">View portfolio</a>
                 
             </div>
-            <img src="./img/Backgrounds/dollar-gill-yqNRxWNrC04-unsplash.jpg" alt="">
+            <div class="hero-image" style="background-image: url(./img/Backgrounds/servicesBackground.jpg) ;"></div>
       </div>
       <div class="footer">
           <div class="footer-nav">
