--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,8 @@
                     <input type="submit" value="Submit" class="submit-btn">
                 </form>
                 <div class="social-icons">
-                    <a href=""><i class="fab fa-facebook"></i></a>
-                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/mia.moldo23"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/mia.moldovanphotography/"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="hero-image" style="background-image: url(./img/Backgrounds/contactBackground.jpg) ;"></div>
