--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:wght@200;300;400;600&family=STIX+Two+Text:wght@500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Mia Moldovan|Photography</title>
+    <title>Mia Moldovan|Contact</title>
 </head>
 <body>
     <div class="container">
