--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel = "icon" href = "./img/favicon-16x16.png" type = "image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,11 +37,12 @@
             <div class="hero-text">
                 <h1>Say Hello</h1>
                 <form name="mia-moldo-photo" method="POST" data-netlify="true" class="my-form">
-                    <label for="name">Your Name</label>
+                    <label for="name">Your name</label>
                     <input type="text" name="name" id="">
                     <label for="email">Your email</label>
                     <input type="email" name="" id="">
-                    <textarea name="" id="" cols="30" rows="10">Your message</textarea>
+                    <label for="message">Your message</label>
+                    <textarea name="message" id="" cols="30" rows="10"></textarea>
                     <input type="submit" value="Submit" class="submit-btn">
                 </form>
                 <div class="social-icons">
